<resources>
    <string name="app_name">Lab8</string>
    <string name="hello_message">Hello World!</string>
    <string name="TextView1">Enter your email address:</string>
    <string name="EditText1">Type email here</string>
    <string name="TextView2">Type your password:</string>
    <string name="profile">Your profile</string>
    <string name="name">Your name:</string>
    <string name="enterName">Enter your name</string>
    <string name="email">Your email:</string>
    <string name="enterEmail">Enter your email</string>
    <string name="picture">Your picture:</string>
    <string name="click">Click the button above to take a picture</string>
    <string name="ButtonText">LOGIN</string>
    <string name="goToChat">Go to chat</string>
    <string name="goToToolbar">Go to Toolbar page</string>
    <string name="send">send</string>
    <string name="receive">receive</string>
    <string name="choice1">toast</string>
    <string name="choice2">dialog</string>
    <string name="choice3">snackbar</string>
    <string name="choice4">turtle</string>
    <string name="diaText">What is your new message?</string>
    <string name="gotoWeather">Weather Forecast</string>
</resources>
