<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile" />


    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        tools:text="Your name:" />

    <EditText
        android:id="@+id/enterName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/enterName"/>

    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        tools:text="Your email:" />

    <EditText
        android:id="@+id/enterEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/enterEmail"/>

    <TextView
        android:id="@+id/picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/picture"
        tools:text="Your picture" />

    <ImageButton
        android:id="@+id/photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@android:drawable/picture_frame"/>

    <TextView
        android:id="@+id/click"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/click"
        tools:text="Click the button above to take a picture" />

    <Button
        android:id="@+id/goToChat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/goToChat"
        android:gravity="fill"
        android:textAlignment="center" />

    <Button
        android:id="@+id/goToToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/goToToolbar"
        android:gravity="fill"
        android:textAlignment="center" />


</LinearLayout>