<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/item1"
        android:title="@string/choice1"
        android:icon="@drawable/icon1"
        android:orderInCategory="100"
        app:showAsAction="always"/>


    <item android:id="@+id/item2"
        android:icon="@drawable/icon2"
        app:showAsAction="always"
        android:orderInCategory="200"
        android:title="@string/choice2"/>

    <item android:id="@+id/item3"
        android:icon="@drawable/icon3"
        app:showAsAction="always"
        android:orderInCategory="300"
        android:title="@string/choice3"/>

    <item android:id="@+id/item4"
        android:icon="@drawable/icon4"
        app:showAsAction="never"
        android:orderInCategory="400"
        android:title="@string/choice4"/>
</menu>