<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/TextView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TextView1"
        android:textSize="15dp"
        />

    <EditText
        android:id="@+id/EditEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/EditText1"
        android:inputType="textEmailAddress"
        />

    <TextView
        android:id="@+id/TextView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TextView2"
        android:textSize="15dp"
        />

    <EditText
        android:id="@+id/EditPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ButtonText"
        android:gravity="fill"
        android:textAlignment="center" />

</LinearLayout>